--- a/front/financas/app/globals.css
+++ b/front/financas/app/globals.css
@@ -106,9 +106,11 @@ html, body {
   margin-left: 260px;
   padding: 20px;
   transition: margin-left 0.3s ease;
+  margin-top: 80px;
+
 }
 
-.main-content.shift {
+.main-content.hide-when-sidebar {
   margin-left: 0;
 }
 
@@ -141,6 +143,7 @@ html, body {
 
   .main-content {
     margin-left: 0;
+    margin-top: 0px;
   }
 
   .hamburger {
