--- a/front/financas/app/globals.css
+++ b/front/financas/app/globals.css
@@ -82,7 +82,7 @@ html, body {
 .sidebar a {
   color: white;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .sidebar a:hover {
@@ -98,6 +98,19 @@ html, body {
 
 .sidebar.open {
   transform: translateX(-100%);
+}
+.sidebar-item {
+  display: flex;
+  align-items: center; /* Alinha o conteúdo verticalmente */
+  gap: 8px; /* Adiciona um pequeno espaçamento entre o ícone e o texto */
+}
+
+.sidebar-item a{
+  size: 2000px;
+}
+
+.sidebar-icon {
+  font-size: 1.5rem; /* Ajuste o tamanho do ícone conforme necessário */
 }
 
 /* MAIN CONTENT */
@@ -143,7 +156,7 @@ html, body {
 
   .main-content {
     margin-left: 0;
-    margin-top: 0px;
+    margin-top: 80px;
   }
 
   .hamburger {
